--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,28 +1,37 @@
-<h2>User info</h2>
-
-<%= image_tag user.get_profile_image(100,100) %>
-<table class="users_table">
-  <tr>
-    <th>name</th>
-    <td><%= user.name %></td>
-  </tr>
-  <tr>
-    <th>introduction</th>
-    <td>
-      <% if user.introduction? %>
-        <%= user.introduction %>
-      <% end %>
-    </td>
-  </tr>
-</table>
-
-<% if user == current_user %>
-  <%= link_to "編集", edit_user_path(user), class: 'btn btn-default' %>
-<% else %>
-  <%= link_to "編集", user_path(current_user), class: 'btn btn-default' %>
+<% if book.errors.any? %>
+  <%= book.errors.count %>errors prohibited this obj from being saved:
+  <ul>
+    <% book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
 <% end %>
 
+<h2>User info</h2>
+<%= image_tag user.get_profile_image(100,100) %>
+  <table class="users_table">
+    <tr>
+      <th>name</th>
+      <td><%= user.name %></td>
+    </tr>
+    <tr>
+      <th>introduction</th>
+      <td>
+        <% if user.introduction? %>
+          <%= user.introduction %>
+        <% end %>
+      </td>
+    </tr>
+  </table>
+
+<div class="mt-4 mb-4">
+  <%= link_to edit_user_path(user), class: 'btn btn-outline-secondary btn-block' do %>
+    <i class="fa-solid fa-user-gear"></i>
+  <% end %>
+</div>
+
 <h2>New book</h2>
+
 <%= form_with model: book do |f| %>
   <p>Title</p>
   <%= f.text_field :title %>
