--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,25 @@
-<h2>Editing Book</h2>
-<%= form_with model: @book do |f| %>
-  <div><label for="inputTitle">Title</label></div>
-  <div><%= f.text_field :title, autofocus: true, id:"inputTitle" %></div>
-  <div><label for="inputOption">Option</label></div>
-  <div><%= f.text_field :body, id:"inputOption" %></div>
-  <div><%= f.submit "Update Book" %></div>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this obj from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
 <% end %>
 
-<%= link_to "Show", book_path(@book.user_id) %> | <%= link_to "Back", books_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-8 mx-auto">
+      <h1>Editing Book</h1>
+      <%= form_with model: @book do |f| %>
+        <div><label for="inputTitle">Title</label></div>
+        <div><%= f.text_field :title, id:"inputTitle" %></div>
+        <div><label for="inputOption">Option</label></div>
+        <div><%= f.text_area :body, id:"inputOption" %></div>
+        <div><%= f.submit "Update Book" %></div>
+      <% end %>
+
+      <%= link_to "Show", book_path(@book.user_id) %> | <%= link_to "Back", books_path %>
+    </div>
+  </div>
+</div>
