--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,21 +1,38 @@
-<%= render 'list', user:@user, book:@book %>
+<div class="container">
+  <div class="row">
 
-<h2>Book detail</h2>
-<table class="book_show">
-  <tr>
-    <td>
-      <%= image_tag @user.get_profile_image(75,75) %><br>
-      <%= @user.name %>
-    </td>
-    <td><%= @book1.title %></td>
-    <td><%= @book1.body %></td>
-    <% if @user == current_user %>
-      <td>
-        <%= link_to "Edit", edit_book_path(@book1), class: 'btn btn-default' %>
-      </td>
-      <td>
-        <%= link_to "Destroy", destroy_book_path(@book1), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-      </td>
-    <% end %>
-  </tr>
-</table>
+    <div class="col-md-3">
+      <%= render 'list', user:@user, book:@book %>
+    </div>
+
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="book_show table-hover">
+        <tbody>
+          <tr>
+            <td>
+              <%= link_to user_path(@user) do %>
+                <%= image_tag @user.get_profile_image(75,75) %><br>
+                <%= @user.name %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to book_path(@book1) do %>
+                <%= @book1.title %>
+              <% end %>
+            </td>
+            <td><%= @book1.body %></td>
+            <% if @user == current_user %>
+              <td>
+                <%= link_to "Edit", edit_book_path(@book1), class: 'btn btn-success' %>
+              </td>
+              <td>
+                <%= link_to "Destroy", destroy_book_path(@book1), method: :delete, "data-confirm" => "本当に削除しますか？", class: 'btn btn-danger' %>
+              </td>
+            <% end %>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
