--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,11 +1,20 @@
-<h2>welcome to <i class="fa-solid fa-book"></i>Bookers!!</h2>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-8 offset-2">
+      <h1>welcome to <i class="fa-solid fa-book"></i>Bookers!!</h1>
 
-<p>in <i class="fa-solid fa-book"></i>Bokers,</p><br>
-<p>you can share and exchange your opinions , inpressions , and emotions</p><br>
-<p>about various books!</p>
+      <p>in <i class="fa-solid fa-book"></i>Bokers,</p><br>
+      <p>you can share and exchange your opinions , inpressions , and emotions</p><br>
+      <p>about various books!</p>
+    </div>
+  </div>
 
-<%= link_to "Log in", new_user_session_path, class: 'btn btn-default' %>
-<%= link_to "Sign up", new_user_registration_path, class: 'btn btn-default'%>
-
+  <div class="row">
+    <div class="col-8 mx-auto">
+      <%= link_to "Log in", new_user_session_path, class: 'btn btn-info btn-block' %>
+      <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-success btn-block'%>
+    </div>
+  </div>
+</div>
 
 
