--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to "/users/show", class: 'nav-link text-light' do %>
+                <%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
                   <i class="fa-solid fa-house"></i> Home
                 <% end %>
               </li>
@@ -50,7 +50,7 @@
                 <% end %>
               </li>
               <li class="nav-item">
-                <%= link_to about_path, class: 'nav-link text-light' do %>
+                <%= link_to "/home/about", class: 'nav-link text-light' do %>
                   <i class="fa-solid fa-link"></i> About
                 <% end %>
               </li>
@@ -71,10 +71,14 @@
       </nav>
     </header>
 
+    <% flash.each do |message_type, message| %>
+      <%= content_tag :div, message, class: message_type %>
+    <% end %>
+
     <%= yield %>
   </body>
 
   <fooder>
-    <p>CopyRight Infratop.inc</p>
+    <p class="text-center mt-5">CopyRight Infratop.inc</p>
   </fooder>
 </html>
