--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,25 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<% if @user.errors.any? %>
+  <%= @user.errors.count %>errors prohibited this obj from being saved:
+  <ul>
+    <% @user.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-8 mx-auto">
+      <h2>User info</h2>
+      <%= form_with model: @user do |f| %>
+        <label for="inputName">Name</label>
+        <div><%= f.text_field :name, id:"inputName" %></div>
+        <label for="inputImage">Image</label>
+        <div><%= f.file_field :profile_image, accept: "image/*" %></div>
+        <label for="inputIntroduction">Introduction</label>
+        <div><%= f.text_area :introduction, id:"inputIntroduction" %></div>
+        <%= f.submit "Update User" %>
+      <% end %>
+    </div>
+  </div>
+</div>
