--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container">
+  <div class="row">
+
+    <div class="col-md-3">
+      <%= render 'books/list', user:@user, book:@book %>
+    </div>
+
+    <div class="col-md-8 offset-md-1">
+      <h2>Users</h2>
+
+      <table class = "books_table table-hover ">
+        <thead>
+          <tr>
+            <th class ="header1">Image</th>
+            <th class ="header2">name</th>
+            <th class ="header3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |users| %>
+            <tr>
+              <td>
+                <%= image_tag users.get_profile_image(75,75) %>
+              </td>
+              <td>
+                <%= users.name %>
+              </td>
+              <td><%= link_to "Show", user_path(users.id) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
