--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -19,7 +19,7 @@
         <div><%= f.submit "Update Book" %></div>
       <% end %>
 
-      <%= link_to "Show", book_path(@book.user_id) %> | <%= link_to "Back", books_path %>
+      <%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %>
     </div>
   </div>
 </div>
