--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,10 +2,10 @@
   <div class="row">
 
     <div class="col-md-3">
-      <%= render 'list', user:@user, book:@book %>
+      <%= render 'list', user:@user, book:@book_new %>
     </div>
 
-    <div class="col-md-8 offset-md-1">
+    <div class="col-md-8 offset-md-1 mt-4">
       <h2>Book detail</h2>
       <table class="book_show table-hover">
         <tbody>
@@ -17,22 +17,63 @@
               <% end %>
             </td>
             <td>
-              <%= link_to book_path(@book1) do %>
-                <%= @book1.title %>
+              <%= link_to book_path(@book) do %>
+                <%= @book.title %>
               <% end %>
             </td>
-            <td><%= @book1.body %></td>
+            <td><%= @book.body %></td>
+            <% if @book.favorited_by?(current_user) %>
+              <td>
+                <%= link_to book_favorites_path(@book), method: :delete, class: "btn btn-sm btn-danger" do %>
+                  <i class="fas fa-heart"></i><%= @book.favorites.count %>
+                <% end %>
+              </td>
+              <% else %>
+              <td>
+                <%= link_to book_favorites_path(@book), method: :post, class: "btn btn-sm btn-danger" do %>
+                  <i class="far fa-heart"></i><%= @book.favorites.count %>
+                <% end %>
+              </td>
+            <% end %>
             <% if @user == current_user %>
               <td>
-                <%= link_to "Edit", edit_book_path(@book1), class: 'btn btn-success' %>
+                <%= link_to "Edit", edit_book_path(@book), class: 'btn btn-success' %>
               </td>
               <td>
-                <%= link_to "Destroy", destroy_book_path(@book1), method: :delete, "data-confirm" => "本当に削除しますか？", class: 'btn btn-danger' %>
+                <%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "本当に削除しますか？", class: 'btn btn-danger' %>
               </td>
             <% end %>
           </tr>
         </tbody>
       </table>
+
+      <div>
+        <p>コメント件数：<%= @book.book_comments.count %></p>
+        <table class="book_show table-hover">
+          <tbody>
+            <% @book.book_comments.each do |comment| %>
+              <tr>
+                <td>
+                  <%= image_tag comment.user.get_profile_image(50,50) %>
+                  <% if comment.user == current_user %>
+                    <div class="mt-1"><%= link_to "Destroy", book_book_comment_path(comment.book, comment), method: :delete, class: "btn btn-sm", "data-confirm" => "本当に削除しますか？" %></div>
+                  <% end %>
+                </td>
+                <td><%= comment.user.name %></td>
+                <td><%= comment.created_at.strftime('%Y/%m/%d') %></td>
+                <td><%= comment.comment %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="comment-box mt-5">
+        <%= form_with model: [@book, @comment] do |f| %>
+          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" ,class: "form-control"%>
+          <div class="mt-3"><%= f.submit "送信する" %></div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
