--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,2 @@
 
-  <h1 class="text-center m-3">Welcome to <i class="fa-solid fa-book"></i>Bookers!</h1>
+  <h1 class="text-center m-3">Welcome to <i class="fas fa-book"></i>Bookers!</h1>
