--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,9 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col-8 offset-2">
-      <h1>welcome to <i class="fa-solid fa-book"></i>Bookers!!</h1>
+      <h1>welcome to <i class="fas fa-book"></i>Bookers!!</h1>
 
-      <p>in <i class="fa-solid fa-book"></i>Bokers,</p><br>
+      <p>in <i class="fas fa-book"></i>Bokers,</p><br>
       <p>you can share and exchange your opinions , inpressions , and emotions</p><br>
       <p>about various books!</p>
     </div>
