--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,8 @@
             <th class ="header1"></th>
             <th class ="header2">Title</th>
             <th class ="header3">Opinion</th>
+            <th class ="header4"></th>
+            <th class ="header5"></th>
           </tr>
         </thead>
         <tbody>
@@ -29,6 +31,22 @@
                 <% end %>
               </td>
               <td><%= books.body %></td>
+              <% if books.favorited_by?(current_user) %>
+                <td>
+                  <%= link_to book_favorites_path(books), method: :delete, class: "btn btn-sm btn-danger" do %>
+                    <i class="fas fa-heart"></i><%= books.favorites.count %>
+                  <% end %>
+                </td>
+                <% else %>
+                <td>
+                  <%= link_to book_favorites_path(books), method: :post, class: "btn btn-sm btn-danger" do %>
+                    <i class="far fa-heart"></i><%= books.favorites.count %>
+                  <% end %>
+                </td>
+              <% end %>
+              <td>
+                <%= link_to "#{books.book_comments.count} コメント", book_path(books.id) %>
+              </td>
             </tr>
           <% end %>
         </tbody>
